# cmlkit

./: .gitignore  LICENSE  README.md  __init__.py  autoload.py  dataset.py  environment.yml  helpers.py  indices.py  inout.py  mbtr.py  model.py  model_spec.py  optimize.py  predictive_variance.py  property_converter.py  pyproject.toml  regression.py  setup.py  stats.py
autotune/: core.py  grid.py  objective.py  parallel.py  parse.py  settings.py
benchmark/: benchmark_external.py  benchmark_hashing.py  infra.py  results.txt
cli/: nh_run_autotune  nh_start_db  nh_start_worker  prep_db  preview_autotune  run_autotune  start_worker
cmlkit/: README.md  __about__.py  __init__.py  autoload.py  conversion.py  dataset.py  dataset_loader.py  env.py  exceptions.py  helpers.py  indices.py  inout.py  losses.py  model.py  model_spec.py  predictive_variance.py  property_converter.py  regression.py
docs/: Makefile  autoload.rst  autotune.rst  conf.py  conventions.rst  dataset.rst  globals.rst  grids.rst  index.rst  indices.rst  install.md  install.rst  losses.rst  mbtr.rst  model_spec.rst  regression.rst
integration/: README.md  cached_mbtr_files.py  cached_mbtr_timing.py
mbtr/: cached_mbtr.py  funcs.py  mbtr.py
reps/: cached_mbtr.py  mbtr.py
tests/: README.md  herpmodel_1.spec.yml  kaggle-mini.dat.npy  make_dataset.py  make_mbtr.py  make_spec.py  model_1.spec.npy  model_1.spec.yml  model_1.yaml  model_mini.yaml  test-sub.dat.npy  test.dat.npy  test_autotune_lgs.py  test_autotune_parse.py  test_autotune_settings.py  test_basic.py  test_dataset.py  test_engine_base_classes.py  test_engine_cache.py  test_engine_caching.py  test_engine_config.py  test_engine_configparse.py  test_engine_data_data.py  test_engine_inout.py  test_evaluation_loss.py  test_helpers.py  test_indices.py  test_mbtr_mbtr.py  test_model.py  test_model_mini.mbtr.npy  test_model_spec.py  test_optimize.py  test_regression.py  test_regression_qmml_kernel_atomic.py  test_regression_qmml_kernel_functions.py  test_regression_qmml_kernel_global.py  test_regression_qmml_krr.py  test_regression_qmml_krr_kernel_atomic.py  test_regression_qmml_krr_kernel_functions.py  (+24 more)
(+153 files in other folders)
