[tool.poetry]
name = "cmlkit"
version = "2.0.0-alpha15"
description = "Machine learning tools for computational chemistry and condensed matter physics"
authors = ["Marcel Langer <dev@sirmarcel.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sirmarcel/cmlkit"
keywords = ["machine learning", "physics", "optimization", "chemistry"]

[tool.poetry.dependencies]
python = ">=3.7"
hyperopt = "^0.1.2"
numpy = "^1.16"
ase = "^3.17"
PyYAML = "^5.1"
joblib = "^0.13"
pebble = "^4.3"
dill = "^0.2"
son = "^0.2.1"

[tool.poetry.dev-dependencies]
nose = "*"
black = "19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
