[tool.poetry]
name = "cmlkit"
version = "2.0.0-alpha25"
description = "Machine learning tools for computational chemistry and condensed matter physics"
authors = ["Marcel Langer <dev@sirmarcel.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sirmarcel/cmlkit"
keywords = ["machine learning", "physics", "optimization", "chemistry"]

[tool.poetry.dependencies]
python = ">=3.7"
hyperopt = "^0.1.2"
numpy = "^1.16"
ase = ">=3.18"
PyYAML = ">=6.0"
joblib = "^0.13"
pebble = "<=4.3.10"
dill = "^0.2"
son = "^0.4.0"

[tool.poetry.dev-dependencies]
nose = "*"
black = "19.3b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
